gcc/testsuite/g++.dg/modules/p0713-2.C
int j;
module; // { dg-error "expected" }
